--- a/web/app/ponthe/templates/category_gallery.html
+++ b/web/app/ponthe/templates/category_gallery.html
@@ -7,29 +7,27 @@
         <div class="row margin-vert-30">
             <div class="col-md-12">
                 <h2>{{ category.name }}</h2>
-                <p>
-                    {{ category.description }}
-                </p>
+                {% if category.description %}
+                    <p>{{ category.description }}</p>
+                {% endif %}
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 portfolio-group no-padding">
                 {% for event in category.events %}
-                <!-- Portfolio Item -->
-                <div class="col-md-3 portfolio-item margin-bottom-40 design">
-                    <div>
-                        <a href= {{ url_for('private.event_gallery', event_slug=event.slug) }} >
-                            <figure>
-                                <img src="{{ url_for('uploads', file_slug=file_slug) }}">
-                                <figcaption>
-                                    <h3 class="margin-top-20">{{ event.name }}</h3>
-                                </figcaption>
-                            </figure>
-                        </a>
+                    <div class="col-md-3 portfolio-item margin-bottom-40 design">
+                        <div>
+                            <a href="{{ url_for('private.event_gallery', event_slug=event.slug) }}">
+                                <figure>
+                                    <img src="{{ url_for('uploads', file_path=event.cover.file_path) }}">
+                                    <figcaption>
+                                        <h3 class="margin-top-20">{{ event.name }}</h3>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
                     </div>
-                </div>
                 {% endfor %}
-                <!-- End Portfolio Item -->
             </div>
         </div>
     </div>
