--- a/web/app/ponthe/templates/event_gallery.html
+++ b/web/app/ponthe/templates/event_gallery.html
@@ -5,71 +5,39 @@
 <div id="content">
     <div class="container background-white">
         <div class="row margin-vert-30">
-            <div class="col-md-6">
-                <h2>{{ year_slug }} - {{ event_name }} </h2>
-            </div>
-            <div class="col-md-6">
-                <div class="DashboardContainer"></div>
-                <button id="UppyModalOpenerBtn" class="btn btn-primary">Ajouter des fichiers</button>
+            <div class="col-md-12">
+                <h1>{{ event.name }}</h1>
+                {% if event.description %}
+                    <p>{{ event.description }}</p>
+                {% endif %}
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12 portfolio-group no-padding">
-                {% for filename in filenames %}
-                <!-- Portfolio Item -->
-                <div class="col-md-3 portfolio-item margin-bottom-40 design">
-                    <div>
-                        <figure>
-                            <a href="{{ url_for('uploads', filename='{}/{}/{}'.format(year_slug, event_name, filename)) }}">
-                                <img src="{{ url_for('uploads', filename='{}/{}/{}'.format(year_slug, event_name, filename)) }}">
-                            </a>
-                        </figure>
-                    </div>
+        {% for year, galleries in galleries_by_year.items() %}
+            <div class="row margin-vert-30">
+                <div class="col-md-12">
+                    <h2>Année {{ year.slug }}</h2>
                 </div>
-                {% endfor %}
-                <!-- End Portfolio Item -->
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-12 portfolio-group no-padding">
+                    {% for gallery in galleries %}
+                        <div class="col-md-3 portfolio-item margin-bottom-40 design">
+                            <div>
+                                <a href="{{ url_for('private.gallery', gallery_slug=gallery.slug) }}">
+                                    <figure>
+                                        <img src="{{ url_for('uploads', file_path=gallery.cover.file_path) }}">
+                                        <figcaption>
+                                            <h3 class="margin-top-20">{{ gallery.name }}</h3>
+                                        </figcaption>
+                                    </figure>
+                                </a>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
     </div>
 </div>
 <div id="content-bottom-border" class="container"></div>
-<script src="https://transloadit.edgly.net/releases/uppy/v0.25.5/dist/uppy.min.js"></script>
-<script>
-    const uppyTwo = new Uppy.Core({
-        debug: true,
-        autoProceed: false,
-        restrictions: {
-            maxFileSize: 1000000000,
-            maxNumberOfFiles: 10,
-            minNumberOfFiles: 1,
-            allowedFileTypes: ['image/*', 'video/*']
-        }
-    });
-    uppyTwo
-      .use(Uppy.Dashboard, {
-          trigger: '#UppyModalOpenerBtn',
-          inline: false,
-          target: '.DashboardContainer',
-          replaceTargetContent: true,
-          showProgressDetails: true,
-          note: "Images et vidéos seulement, 1–10 fichiers, jusqu'à 1 GB",
-          height: 470,
-          metaFields: [
-              { id: 'name', name: 'Nom', placeholder: 'Match de hand' },
-              { id: 'caption', name: 'Légende', placeholder: "Description du contenu"}
-          ],
-          locale: {
-              strings: {
-                  dropPaste: 'Glisse tes fichiers ici ou %{browse}',
-                  browse: 'parcours'
-              }
-          },
-          browserBackButtonClose: true
-      })
-      .use(Uppy.Tus, {endpoint: "{{ url_for('private.file-upload', year=year_slug, event=event_name) }}"});
-
-    uppy.on('complete', (result) => {
-      console.log(result.successful);
-    })
-</script>
 {% endblock %}
