--- a/web/app/ponthe/templates/year_gallery.html
+++ b/web/app/ponthe/templates/year_gallery.html
@@ -6,28 +6,28 @@
     <div class="container background-white">
         <div class="row margin-vert-30">
             <div class="col-md-12">
-                <h2>Galeries de {{ year_slug }}</h2>
+                <h1>{{ year.name }}</h1>
+                {% if year.description %}
+                    <p>{{ year.description }}</p>
+                {% endif %}
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 portfolio-group no-padding">
-                {% for event, filename in events_year.items() %}
-                <!-- Portfolio Item -->
-                <div class="col-md-3 portfolio-item margin-bottom-40 design">
-                    <div>
-                        <a href="{{ url_for('private.event_gallery', year_slug=year_slug, event_slug=event.slug) }}">
-                            <figure>
-                                <img src="{{ url_for('uploads', filename='{}/{}/{}'.format(year_slug, event.name, filename)) }}">
-                                <figcaption>
-                                    <h3 class="margin-top-20">{{ event.name }}</h3>
-                                    <span>{{ event.description }}</span>
-                                </figcaption>
-                            </figure>
-                        </a>
+                {% for gallery in year.galleries %}
+                    <div class="col-md-3 portfolio-item margin-bottom-40 design">
+                        <div>
+                            <a href="{{ url_for('private.gallery', gallery_slug=gallery.slug) }}">
+                                <figure>
+                                    <img src="{{ url_for('uploads', file_path=gallery.cover.file_path) }}">
+                                    <figcaption>
+                                        <h3 class="margin-top-20">{{ gallery.name }}</h3>
+                                    </figcaption>
+                                </figure>
+                            </a>
+                        </div>
                     </div>
-                </div>
                 {% endfor %}
-                <!-- End Portfolio Item -->
             </div>
         </div>
     </div>
