add reset_link to create account email

--- a/web/app/ponthe/templates/email/create_account.html
+++ b/web/app/ponthe/templates/email/create_account.html
@@ -571,7 +571,9 @@
                                           Tu pourras y visiter les galeries photos et vidéos couvrant les événements de la vie associative de l'école et même y partager les tiennes !
                                           Alors n'attends plus et connecte-toi avec tes identifiants :<br>
                                           Email : {{  email }}<br>
-                                          Mot de passe : {{ password }}
+                                          Mot de passe : {{ password }}<br>
+                                          <br>
+                                          Tu peux réinitialiser ton mot de passe en te rendant sur <a href="{{ reset_link }}" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">{{ reset_link }}</a>.
                                       </p>
                                     </td>
                                   </tr>
