--- a/web/app/ponthe/templates/email/reset.html
+++ b/web/app/ponthe/templates/email/reset.html
@@ -581,7 +581,7 @@
                                         <tbody>
                                           <tr>
                                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial;font-size: 16px;padding: 15px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                              <a class="mcnButton " title="Confirmer mon compte" href="{{ reset_link }}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Réinitialiser</a>
+                                              <a class="mcnButton " title="Confirmer mon compte" href="https://{{ reset_link }}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Réinitialiser</a>
                                             </td>
                                           </tr>
                                         </tbody>
